--- a/src/app/currency-convert/currency-convert.component.html
+++ b/src/app/currency-convert/currency-convert.component.html
@@ -6,13 +6,13 @@
       </div>
       
       <div class="text-black text-4xl ">
-        $40
+        {{exchangeVal}}
       </div>
      <div class="p-3 mt-5">
       <h4 class="align-left">
         Amount
       </h4>
-       <input type="text" class="border-gray-400 border-2  p-3 w-[400px] rounded-md">
+       <input type="number" id="num" class="border-gray-400 border-2  p-3 w-[400px] rounded-md">
      </div>
 
       <div class="currencies">
@@ -25,10 +25,9 @@
         <div class="currency-swap p-7 flex justify-between p-7">
           <div class="currency1  w-[35%] flex justify-evenly items-center p-3">
              
-                <select name="" id="" class="w-full px-4 py-2 text-xl font-bold border border-slate-100 focus:outline-0">
+                <select name="" id="base" class="w-full px-4 py-2 text-xl font-bold border border-slate-100 focus:outline-0">
                 <option value="{{item.key}}" *ngFor="let item of allCurrency | keyvalue">{{item.value}}</option>
-                <option value="usd">usd</option>
-                <option value="btc">btc</option>
+                
               </select>
           </div>
           <div class="arr  w-[25%]">
@@ -38,15 +37,14 @@
           </div>
           <div class="currency1  w-[35%] flex justify-evenly items-center p-3">
              
-                <select name="" id="" class="w-full px-4 py-2 text-xl font-bold border border-slate-100 focus:outline-0">
+                <select name="" id="quote" class="w-full px-4 py-2 text-xl font-bold border border-slate-100 focus:outline-0">
                 <option value="{{item.key}}" *ngFor="let item of allCurrency | keyvalue">{{item.value}}</option>
-                <option value="usd">usd</option>
-                <option value="btc">btc</option>
+                
               </select>
           </div>
 
         </div>
       </div>
-        <button class="btn p-2 w-[50%] bg-sky-500 text-white rounded-md">Convert</button>
+        <button class="btn p-2 w-[50%] bg-sky-500 text-white rounded-md" (click)="convertMoney()">Convert</button>
   </div>
 </div>
